--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,16 @@ edition = "2018"
 num = "0.2.0"
 nalgebra = "0.16.0"
 rand = "0.6.5"
+rand_xoshiro = "0.1.0"
+
+[dev-dependencies]
+criterion = "0.2.10"
 
 [profile.release]
 debug=true
 lto=true
 codegen-units=1
+
+[[bench]]
+name = "render_benchmark"
+harness = false
