More partial implementation of bvh

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rand = "0.6.5"
 rand_xoshiro = "0.1.0"
 rayon = "1.0.3"
 bumpalo = "2.4.3"
+partition = "0.1.1"
 
 [dev-dependencies]
 criterion = "0.2.10"
