--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2018"
 
 [dependencies]
 num = "0.2.0"
-nalgebra = "0.18.0"
 rand = "0.6.5"
 rand_xoshiro = "0.2.0"
 rayon = "1.0.3"
 bumpalo = "2.4.3"
 partition = "0.1.1"
+cgmath = "0.17.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
