--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bumpalo = "2.4.3"
 partition = "0.1.1"
 cgmath = "0.17.0"
 smallvec = "0.6.10"
+parking_lot = "0.8.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
