--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ cgmath = "0.17.0"
 smallvec = "0.6.10"
 parking_lot = "0.8.0"
 bitflags = "1.1.0"
+arrayvec = "0.4.10"
 
 [dev-dependencies]
 criterion = "0.2.11"
