--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ smallvec = "0.6.10"
 parking_lot = "0.8.0"
 bitflags = "1.1.0"
 arrayvec = "0.4.10"
+image = "0.21.2"
+approx = "0.3.2"
 
 [dev-dependencies]
 criterion = "0.2.11"
