--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bitflags = "1.1.0"
 arrayvec = "0.4.10"
 image = "0.21.2"
 approx = "0.3.2"
+tobj = "0.1.10"
 
 [dev-dependencies]
 criterion = "0.2.11"
