--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ arrayvec = "0.4.10"
 image = "0.21.2"
 approx = "0.3.2"
 tobj = "0.1.10"
+indicatif = "0.11.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
