--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ indicatif = "0.11.0"
 criterion = "0.2.11"
 pretty_assertions = "0.6.1"
 
+[profile.dev]
+incremental=false  # needed to avoid const generics ICE
+
 [profile.release]
 debug=true
 lto=true
