--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ image = "0.21.2"
 approx = "0.3.2"
 tobj = "0.1.10"
 indicatif = "0.11.0"
+ndarray = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
