--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ approx = "0.3.2"
 tobj = "0.1.10"
 indicatif = "0.11.0"
 ndarray = "0.13.0"
+pbrt-parser = { path = "/Users/alex/workspace/pbrt-parser" }
 
 [dev-dependencies]
 criterion = "0.2.11"
