--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ once_cell = "1.3.1"
 anyhow = "1.0.26"
 ndarray = "0.13.0"
 pbrt-parser = { path = "../pbrt-parser" }
+resize = "0.4.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
