Add support for loading exr files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ anyhow = "1.0.26"
 ndarray = "0.13.0"
 pbrt-parser = { path = "../pbrt-parser" }
 resize = "0.4.0"
+#exr = "0.7.3" // TODO evaluate both
+openexr = "0.7.0"
 
 [dev-dependencies]
 criterion = "0.2.11"
