Add support for loading PLY mesh files, fix critical bug in tri intersect
Geometry now looks correct but shading (normals?) look off from pbrt reference.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ pbrt-parser = { path = "../pbrt-parser" }
 resize = "0.4.0"
 #exr = "0.7.3" // TODO evaluate both
 openexr = "0.7.0"
+ply-rs = "0.1.2"
 
 [dev-dependencies]
 criterion = "0.2.11"
