--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rayon = "1.0.3"
 bumpalo = "2.4.3"
 partition = "0.1.1"
 cgmath = "0.17.0"
-smallvec = "0.6.10"
+smallvec = "1.2.0"
 parking_lot = "0.8.0"
 bitflags = "1.1.0"
 arrayvec = "0.4.10"
@@ -25,8 +25,7 @@ anyhow = "1.0.26"
 ndarray = "0.13.0"
 pbrt-parser = { path = "../pbrt-parser" }
 resize = "0.4.0"
-#exr = "0.7.3" // TODO evaluate both
-openexr = "0.7.0"
+exr = "0.7.3"
 ply-rs = "0.1.2"
 
 [dev-dependencies]
