--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ ply-rs = "0.1.2"
 
 clap = { git = "https://github.com/clap-rs/clap/" } # TODO separate deps for bins
 
+tracing = "0.1.13"
+tracing-subscriber = "0.2.4"
+
 [dev-dependencies]
 criterion = "0.3.1"
 pretty_assertions = "0.6.1"
