--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ clap = { git = "https://github.com/clap-rs/clap/" } # TODO separate deps for bin
 
 tracing = "0.1.13"
 tracing-subscriber = "0.2.4"
+tracing-tree = { git = "https://github.com/davidbarsky/tracing-tree" }
 
 [dev-dependencies]
 criterion = "0.3.1"
