--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,16 +23,16 @@ indicatif = "0.11.0"
 once_cell = "1.3.1"
 anyhow = "1.0.26"
 ndarray = "0.13.0"
-pbrt-parser = { path = "../pbrt-parser" }
+pbrt-parser = { git = "https://github.com/akofke/pbrt-parser" }
 resize = "0.4.0"
 exr = "0.7.3"
 plydough = { git = "https://github.com/akofke/plydough" }
 
-clap = { git = "https://github.com/clap-rs/clap/" } # TODO separate deps for bins
+clap = "3.0.0-beta.2"
 
 tracing = "0.1.13"
 tracing-subscriber = "0.2.4"
-tracing-tree = { git = "https://github.com/davidbarsky/tracing-tree" }
+tracing-tree = { git = "https://github.com/davidbarsky/tracing-tree", branch= "main"}
 
 [dev-dependencies]
 criterion = "0.3.1"
